kubernetes/doc-home-cluster/infrastructure/database/crunchy-postgres-operator/cluster/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-postgres-cluster
spec:
  description: "Allow pods traffic to postgres-cluster"
  endpointSelector:
    matchLabels:
      egress.home.arpa/postgres-cluster: allow
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: crunchy-postgres
            postgres-operator.crunchydata.com/data: postgres
            k8s:io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
